updated contact page, added better content and update to projects

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>Xavier Bowen</h1>
+					<h1>Xavier Thomas</h1>
 					<h4>WEB DESIGNER, DEVELOPER & SHOE ADDICT</h4>
 				</div>
 			</div><! --/row -->
@@ -84,23 +84,26 @@
 
     
 	
-    <div id="footerwrap">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & SHOE ADDICT</b></p>
-				</div>
-			
-				<div class="col-lg-4">
-					<p>Just a Lion living in concrete Jungle.</p>
-				</div>
-				<div class="col-lg-4">
-					<p>ai_jose@outlook.com</p>
-				</div>
-			</div>
-		</div>
-	</div><! --/footerwrap -->
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row centered">
+                <div class="col-lg-4">
+                    <p>Copyright &copy; Xavier Thomas 2017</p>
+                </div>
+                <div class="col-lg-4">
+                    <p><b>WEB DESIGNER, DEVELOPER & SHOE ADDICT</b></p>
+                </div>
 
+                <div class="col-lg-4">
+                    <p>Just a Lion living in concrete Jungle.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>ai_jose@outlook.com</p>
+                </div>
+            </div>
+            <!-- /.row -->
+    </footer>
 
 
     <!-- JavaScript Section -->
