--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Me</title>
+    <title>Contact Me</title>
     <!-- CSS Section -->
     <link rel="icon" href="Access\Img\Young Lion.png" alt="Lion logo">
     <link rel="stylesheet" href="Content/css/bootstrap.min.css">
@@ -50,49 +50,36 @@
     <!-- Main Content -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-               <h2>Personal Information</h2>
-               <p id="Contact">
-                   
-                   </p>
+            <div class="col-md-offset-3 col-md-6">      
+                <form id="contactForm" action="" role="form" novalidate>
                 <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
                 <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
                 <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-                <form name="sentMessage" id="contactForm" novalidate>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Name</label>
-                            <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                            <p class="help-block text-danger"></p>
-                        </div>
+                      <legend>Contact Form</legend>
+                    <div class="form-group">
+                        <label for="firstName">First Name</label>
+                        <input type="text" class="form-control" id="firstName" placeholder="Enter First Name" required>
                     </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Email Address</label>
-                            <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                            <p class="help-block text-danger"></p>
-                        </div>
+                    <div class="form-group">
+                        <label for="lastName">Last Name</label>
+                        <input type="text" class="form-control" id="lastName" placeholder="Enter Last Name" required>
                     </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Phone Number</label>
-                            <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                            <p class="help-block text-danger"></p>
-                        </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter Email" required>
                     </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Message</label>
-                            <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                            <p class="help-block text-danger"></p>
-                        </div>
+                    <div class="form-group">
+                        <label for="contactNumber">Contact Number</label>
+                        <input type="tel" class="form-control" id="contactNumber" placeholder="Enter Contact Number" required>
                     </div>
-                    <br>
-                    <div id="success"></div>
-                    <div class="row">
-                        <div class="form-group col-xs-12">
-                            <button id="SendButton" type="submit" class="btn btn-default">Send</button>
-                        </div>
+                    <div class="form-group">
+                        <label for="message">Your Message</label>
+                        <textarea cols="3" rows="3" class="form-control" id="message" placeholder="Enter Your Message here..." required></textarea>
+                    </div>
+                    
+                    <div class="text-right">
+                        <a id="cancelButton" href="index.html" class="btn btn-warning">Cancel</a>
+                        <button id="sendButton" class="btn btn-primary">Send</button>
                     </div>
                 </form>
             </div>
@@ -106,22 +93,26 @@
     </div>
 
 
-	<div id="footerwrap">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & SHOE ADDICT</b></p>
-				</div>
-			
-				<div class="col-lg-4">
-					<p>Just a Lion living in concrete Jungle.</p>
-				</div>
-				<div class="col-lg-4">
-					<p>ai_jose@outlook.com</p>
-				</div>
-			</div>
-		</div>
-	</div><! --/footerwrap -->
+	<!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row centered">
+                <div class="col-lg-4">
+                    <p>Copyright &copy; Xavier Thomas 2017</p>
+                </div>
+                <div class="col-lg-4">
+                    <p><b>WEB DESIGNER, DEVELOPER & SHOE ADDICT</b></p>
+                </div>
+
+                <div class="col-lg-4">
+                    <p>Just a Lion living in concrete Jungle.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>ai_jose@outlook.com</p>
+                </div>
+            </div>
+            <!-- /.row -->
+    </footer>
 
 
 
