--- a/projects.html
+++ b/projects.html
@@ -42,53 +42,132 @@
         <!-- /.container-fluid -->
     </nav>
 
+    <!-- Page Content -->
     <div class="container">
-        <div class="row">
+        <!-- <div class="row">
             <h1>Projects</h1>
 
             <p id="paragraphTwo">
             </p>
-         </div>
-    </div>
-            <section id="works"></section>
+         </div> -->
 
-	<div class="container">
-		<div class="row centered mt mb">
-			
-			<div class="col-lg-10 col-lg-offset-1 mt">
-				<p>
-                    <a href="http://studentweb.cencol.ca/xthomasb/300701821Practical2/300701821Practical2.html">
-                <img  class="project1" src="Access\Img\project1.png">
-				</a>
-                <a href="http://studentweb.cencol.ca/xthomasb/week8/Week08%20-%20Background%20Images.html">
-				<img class="project2" src="Access\Img\project2.png">
-                </a>
-                <a href="http://studentweb.cencol.ca/xthomasb/Assignment3/Mazda3.html">
-				<img class="project3" src="Access\Img\project3.png">
-			    </a>
-                </p>
-            </div>
-                      
+        <div class="col-lg-12">
+            <h1 class="page-header">Recent Projects
+                <small>Past projects worked on...</small>
+            </h1>
         </div>
-    </div>
-    
-<div id="footerwrap">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & SHOE ADDICT</b></p>
-				</div>
-			
-				<div class="col-lg-4">
-					<p>Just a Lion living in concrete Jungle.</p>
-				</div>
-				<div class="col-lg-4">
-					<p>ai_jose@outlook.com</p>
-				</div>
-			</div>
-		</div>
-	</div><! --/footerwrap -->
+        <!-- /.row -->
 
+        <!-- Project One -->
+        <div class="row">
+            <div class="col-md-7">
+                <a href="http://studentweb.cencol.ca/xthomasb/300701821Practical2/300701821Practical2.html">
+                    <img class="img-responsive" src="Access\Img\project1.png">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Project One</h3>
+                <h4>Airflight Booking</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum
+                    at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque
+                    eveniet unde.</p>
+                <a class="btn btn-primary" href="http://studentweb.cencol.ca/xthomasb/300701821Practical2/300701821Practical2.html">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+        <!-- Project Two -->
+        <div class="row">
+            <div class="col-md-7">
+                <a href="http://studentweb.cencol.ca/xthomasb/week8/Week08%20-%20Background%20Images.html">
+                    <img class="img-responsive" src="Access\Img\project2.png">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Project Two</h3>
+                <h4>Color Blending</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus
+                    distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
+                <a class="btn btn-primary" href="http://studentweb.cencol.ca/xthomasb/week8/Week08%20-%20Background%20Images.html">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+        <!-- Project Three -->
+        <div class="row">
+            <div class="col-md-7">
+                <a href="http://studentweb.cencol.ca/xthomasb/Assignment3/Mazda3.html">
+                    <img class="img-responsive" src="Access\Img\project3.png">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Project Three</h3>
+                <h4>Advertising</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut
+                    unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti
+                    alias possimus!</p>
+                <a class="btn btn-primary" href="http://studentweb.cencol.ca/xthomasb/Assignment3/Mazda3.html">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Pagination -->
+        <div class="row text-center">
+            <div class="col-lg-12">
+                <ul class="pagination">
+                    <li>
+                        <a href="#">&laquo;</a>
+                    </li>
+                    <li class="active">
+                        <a href="#">1</a>
+                    </li>
+                    <li>
+                        <a href="#">2</a>
+                    </li>
+                    <li>
+                        <a href="#">3</a>
+                    </li>
+                    <li>
+                        <a href="#">4</a>
+                    </li>
+                    <li>
+                        <a href="#">5</a>
+                    </li>
+                    <li>
+                        <a href="#">&raquo;</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row centered">
+                <div class="col-lg-4">
+                    <p>Copyright &copy; Xavier Thomas 2017</p>
+                </div>
+                <div class="col-lg-4">
+                    <p><b>WEB DESIGNER, DEVELOPER & SHOE ADDICT</b></p>
+                </div>
+
+                <div class="col-lg-4">
+                    <p>Just a Lion living in concrete Jungle.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>ai_jose@outlook.com</p>
+                </div>
+            </div>
+            <!-- /.row -->
+    </footer>
 
 
     <!-- JavaScript Section -->
