adding intro video

--- a/index.html
+++ b/index.html
@@ -13,7 +13,31 @@
     <link rel="stylesheet" href="Content/app.css">
 </head>
 
+
 <body>
+
+<!-- Section: home video -->
+    <section id="intro" class="home-video text-light">
+		<div class="home-video-wrapper">
+
+		<div class="homevideo-container">
+           <div id="P1" class="bg-player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'https://www.youtube.com/watch?v=mroiVdC7H10',containment:'.homevideo-container', quality: 'hd720', showControls: false, autoPlay:true, mute:true, startAt:0, opacity:1}"></div>
+		</div>
+		<div class="overlay">
+			<div class="text-center video-caption">
+				<div class="wow bounceInDown" data-wow-offset="0" data-wow-delay="0.8s">
+					<h1 class="big-heading font-light"><span id="js-rotating">We are valera, Awesome Bootstrap theme, Get better appearance, Craft from pixel </span></h1>
+				</div>
+				<div class="wow bounceInUp" data-wow-offset="0" data-wow-delay="1s">
+					<div class="margintop-30">
+						<a href="#about" class="btn btn-skin" id="btn-scroll">Start here</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
+    </section>
+	<!-- /Section: intro -->
 
     <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -107,9 +131,12 @@
 
 
     <!-- JavaScript Section -->
+    <script src="js/jquery.mb.YTPlayer.js"></script>
     <script src="Scripts\lib\jquery\dist\jquery.min.js"></script>
     <script src="Scripts\lib\bootstrap\dist\js\bootstrap.min.js"></script>
     <script src="Scripts/app.js"></script>
+    <script src="js/morphext.min.js"></script>
+    <script src="js/jquery.appear.js"></script>
 </body>
 
 </html>
