--- a/about.html
+++ b/about.html
@@ -50,12 +50,9 @@
     <!-- Main Content -->
     <div class="container">
         <div class="row">
-            <div class="col-md-offset-3 col-md-6">      
-                <form id="contactForm" action="" role="form" novalidate>
-                <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
-                <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
-                <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-                      <legend>Contact Form</legend>
+            <div class="col-md-offset-3 col-md-6">       
+                <form id="contactForm" action="" role="form">
+                    <legend>Contact Form</legend>
                     <div class="form-group">
                         <label for="firstName">First Name</label>
                         <input type="text" class="form-control" id="firstName" placeholder="Enter First Name" required>
