--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
 
 
     <!-- JavaScript Section -->
-    <script src="js/jquery.mb.YTPlayer.js"></script>
+    <script src="Scripts\jquery.mb.YTPlayer.js"></script>
     <script src="Scripts\lib\jquery\dist\jquery.min.js"></script>
     <script src="Scripts\lib\bootstrap\dist\js\bootstrap.min.js"></script>
     <script src="Scripts/app.js"></script>
-    <script src="js/morphext.min.js"></script>
-    <script src="js/jquery.appear.js"></script>
+    <script src="Scripts\morphext.min.js"></script>
+    <script src="Scripts\jquery.appear.js"></script>
 </body>
 
 </html>
