edited out the video into not finished completing

--- a/about.html
+++ b/about.html
@@ -115,9 +115,14 @@
 
 
     <!-- JavaScript Section -->
+    <script src="Scripts\jquery.mb.YTPlayer.js"></script>
     <script src="Scripts\lib\jquery\dist\jquery.min.js"></script>
     <script src="Scripts\lib\bootstrap\dist\js\bootstrap.min.js"></script>
     <script src="Scripts/app.js"></script>
+    <script src="Scripts\morphext.min.js"></script>
+    <script src="Scripts\jquery.appear.js"></script>
+    <script src="Scripts\wow.min.js"></script>
+    <script src="Scripts\custom.js"></script>
 </body>
 
 </html>
