--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<!-- Section: home video -->
+<!-- Section: home video 
     <section id="intro" class="home-video text-light">
 		<div class="home-video-wrapper">
 
@@ -37,7 +37,7 @@
 		</div>
 		</div>
     </section>
-	<!-- /Section: intro -->
+	 /Section: intro -->
 
     <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -137,6 +137,9 @@
     <script src="Scripts/app.js"></script>
     <script src="Scripts\morphext.min.js"></script>
     <script src="Scripts\jquery.appear.js"></script>
+    <script src="Scripts\wow.min.js"></script>
+    <script src="Scripts\custom.js"></script>
+
 </body>
 
 </html>
